--- a/BlazorApp3/Client/Pages/ReadFeedBack.razor
+++ b/BlazorApp3/Client/Pages/ReadFeedBack.razor
@@ -1,7 +1,8 @@
-﻿<h3>Read Feed Back</h3>
+﻿
 @attribute [Authorize(Roles = "Admin")]
 @page "/ReadFeedBack"
 
+@*<div></div>
 @if (feedbacks.Count == 0)
 {
     <div>loading</div>
@@ -18,7 +19,125 @@ else
 
 <div class="button" style="margin:10px" @onclick="LoadMore">
     <a style="cursor: pointer;">Load More</a>
-</div>
+</div>*@
+
+<head>
+    <meta charset="utf-8">
+    <title>bs4 Ratings and Reviews page - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @*<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>*@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>*@
+</head>
+
+<body>
+    <link rel="stylesheet" href="https://allyoucan.cloud/cdn/icofont/1.0.1/icofont.css"
+          integrity="sha384-jbCTJB16Q17718YM9U22iJkhuGbS0Gd2LjaWb4YJEZToOPmnKDjySVa323U+W7Fv" crossorigin="anonymous">
+    <div class="container">
+        <div class="col-md-12">
+            <div class="offer-dedicated-body-left">
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade active show" id="pills-reviews" role="tabpanel"
+                         aria-labelledby="pills-reviews-tab">
+                        <div class="bg-white rounded shadow-sm p-4 mb-4 restaurant-detailed-ratings-and-reviews">
+                            <a href="#" class="btn btn-outline-primary btn-sm float-right">Reviews</a>
+                            <h5 class="mb-1">All Feedback and Reviews</h5>
+                            @if (feedbacks.Count == 0)
+                            {
+                                <div>loading</div>
+                            }
+                            else
+                            {
+                                @foreach (var item in feedbacks)
+                                {
+                                    <div class="reviews-members pt-4 pb-4">
+                                        <div class="media">
+                                            <a href="#">
+                                                <img alt="Generic placeholder image"
+                                             src="http://bootdey.com/img/Content/avatar/avatar1.png"
+                                             class="mr-3 rounded-pill">
+                                            </a>
+                                            <div class="media-body">
+                                                <div class="reviews-members-header">
+                                                    @*<span class="star-rating float-right">
+                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
+                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
+                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
+                                                        <a href="#"><i class="icofont-ui-rating active"></i></a>
+                                                        <a href="#"><i class="icofont-ui-rating"></i></a>
+                                                    </span>*@
+                                                    <h6 class="mb-1"><a class="text-black" href="#">@item.Name</a></h6>
+                                                    <p class="text-gray">@item.Email</p>
+                                                </div>
+                                                <div class="reviews-members-body">
+                                                    <p>
+                                                        @item.Message
+                                                    </p>
+                                                </div>
+                                                <div class="reviews-members-footer">
+                                                    <a class="total-like" href="#"><i class="icofont-thumbs-up"></i>Like</a> 
+                                                    <a class="total-like" href="#"><i class="icofont-thumbs-down"></i>Dislike</a>
+                                                    @*<span class="total-like-user-main ml-2" dir="rtl">
+                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
+                                                   data-original-title="Gurdeep Osahan">
+                                                            <img alt="Generic placeholder image"
+                                                         src="http://bootdey.com/img/Content/avatar/avatar5.png"
+                                                         class="total-like-user rounded-pill">
+                                                        </a>
+                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
+                                                   data-original-title="Gurdeep Singh">
+                                                            <img alt="Generic placeholder image"
+                                                         src="http://bootdey.com/img/Content/avatar/avatar2.png"
+                                                         class="total-like-user rounded-pill">
+                                                        </a>
+                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
+                                                   data-original-title="Askbootstrap">
+                                                            <img alt="Generic placeholder image"
+                                                         src="http://bootdey.com/img/Content/avatar/avatar3.png"
+                                                         class="total-like-user rounded-pill">
+                                                        </a>
+                                                        <a data-toggle="tooltip" data-placement="top" title="" href="#"
+                                                   data-original-title="Osahan">
+                                                            <img alt="Generic placeholder image"
+                                                         src="http://bootdey.com/img/Content/avatar/avatar4.png"
+                                                         class="total-like-user rounded-pill">
+                                                        </a>
+                                                    </span>*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                }
+                            }
+                            <hr>
+                            <a class="text-center w-100 d-block mt-4 font-weight-bold" style="cursor: pointer;" @onclick="LoadMore">See more Feedbacks</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @code {
     private List<FeedbackMessageModel> feedbacks = new();
     private int index = 1;
@@ -37,6 +156,7 @@ else
     }
     private async Task LoadMore()
     {
+        index++;
         feedbacks.AddRange(await _httpClient.GetFromJsonAsync<List<FeedbackMessageModel>>($"admin/ReadFeedBack/{index}"));
     }
 }
